@@ -14,6 +14,9 @@ from trytond.rpc import RPC
 from trytond.tools import slugify
 from trytond.transaction import Transaction
 
+_request_timeout = config.getint('request', 'timeout', default=0)
+_request_records_limit = config.getint('request', 'records_limit')
+
 
 class DomainError(ValidationError):
     pass
@@ -90,8 +93,16 @@ class DictSchemaMixin(object):
     def __setup__(cls):
         super(DictSchemaMixin, cls).__setup__()
         cls.__rpc__.update({
-                'get_keys': RPC(instantiate=0),
-                'search_get_keys': RPC(),
+                'get_keys': RPC(
+                    instantiate=0,
+                    size_limits={
+                        0: _request_records_limit,
+                        }),
+                'search_get_keys': RPC(
+                    size_limits={
+                        1: _request_records_limit,
+                        },
+                    timeout=_request_timeout),
                 })
 
     @staticmethod
