@@ -56,7 +56,11 @@ class Model(URLMixin, PoolBase, metaclass=ModelMeta):
             cls.__string__ = humanize(cls.__name__)
         cls.__rpc__ = {
             'default_get': RPC(cache=dict(seconds=5 * 60)),
-            'fields_get': RPC(cache=dict(days=1)),
+            'fields_get': RPC(
+                cache=dict(days=1),
+                size_limits={
+                    1: 0,
+                    }),
             'pre_validate': RPC(instantiate=0),
             }
         cls.__access__ = set()
